# mlops-portfolio

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
agent/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
agent/helm/agent/: Chart.yaml  values.yaml
agent/helm/agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
agent/src/agent/application/generation/: agent_use_case.py
agent/src/agent/application/ingestion/: ingest_url_use_case.py
agent/src/agent/application/ports/: document_splitter.py
agent/src/agent/application/retrieval/: answer_query_use_case.py
agent/src/agent/domain/model/: document.py  email.py  query.py
agent/src/agent/domain/ports/: currency_service.py  document_store.py  embedder.py  llm.py  scraper.py
agent/src/agent/infrastructure/: frankfurter_currency_service.py  langchain_splitter.py  llamaindex_splitter.py
agent/src/agent/infrastructure/api/: dependencies.py  main.py  settings.py
agent/src/agent/infrastructure/api/routers/: agent.py  health.py  ingest.py  query.py
agent/src/agent/infrastructure/aws/: bedrock_embedder.py  bedrock_llm.py
agent/src/agent/infrastructure/observability/: logging.py  telemetry.py
agent/src/agent/infrastructure/opensearch/: opensearch_store.py
agent/src/agent/infrastructure/scrapers/: httpx_scraper.py
agent/src/agent/infrastructure/tools/: currency_tool.py  email_tool.py
agent/tests/: conftest.py
agent/tests/unit/: test_health.py
agent/tests/unit/application/: test_answer_query.py  test_ingest_url.py
agent/tests/unit/domain/: test_document.py
agent/tests/unit/infrastructure/: test_currency_tool.py  test_email_tool.py
terraform/: github_actions_oidc.tf  iam.tf  main.tf  network.tf  provider.tf  variables.tf  vector_db.tf
